# peoplegpt-100x

./: .gitignore  README.md  main.py  pyproject.toml  resume.json
100x_backend/: pyproject.toml
100x_backend/db/: test.py
100x_backend/db/ed54d97b-d804-437a-b97f-9ba3a0531b43/: resumes_ed54d97b-d804-437a-b97f-9ba3a0531b43.duckdb
100x_backend/db/fdaddede-8361-4c3e-abc0-ad0de28a49b7/: resumes_fdaddede-8361-4c3e-abc0-ad0de28a49b7.duckdb
100x_backend/notebooks/: driver.ipynb  sample_driver.ipynb
100x_backend/servers/: __init__.py  app.py
100x_backend/servers/db_utils/: __init__.py
100x_backend/servers/generation_server/: server.py
100x_backend/servers/scoring_server/: server.py
db/: resumes_3f496a1c-3e16-11f0-81c1-e1be77211e00.duckdb  test.py
db/string_1232132/: resumes_string_1232132.duckdb
db/string_456/: resumes_string_456.duckdb
notebooks/: openai-to-langchain-migration.ipynb
peoplegpt-100x-development-front-end/100x_backend/: example.env   pyproject.toml
peoplegpt-100x-development-front-end/100x_backend/servers/: app.py
peoplegpt-100x-development-front-end/100x_frontend/pplgpt/: example.env   package-lock.json  package.json
servers/: app.py  connectors.py
servers/extraction_server/: server.py
servers/extraction_server/resume_parser/: core.py
servers/generation_server/: __init__.py  server.py
servers/scoring_server/: __init__.py
servers/scoring_server/ats_scoring/: __init__.py  core.py
src/: sample_driver.py
src/servers/: __init__.py  connectors.py
src/servers/db_utils/: resume_db_utils.py
src/servers/resume-parser/: core.py
(+55 files in other folders)
