[project]
name = "100x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "pdfplumber>=0.11.6",
    "pip>=25.1.1",
    "pyresparser>=1.0.6",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
]
